[tool.poetry]
name = "maroon"
version = "0.1.0"
description = "Maroon is a package that manages music for Roon"
authors = ["yada <trojblue@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pydub = "^0.25.1"
tinytag = "^1.9.0"
mutagen = "^1.46.0"

[tool.poetry.scripts]
maroon = 'maroon.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
